--- a/BodySee/BodySee.csproj
+++ b/BodySee/BodySee.csproj
@@ -55,30 +55,30 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="BlockingWindow.xaml.cs">
+    <Compile Include="Windows\BlockingWindow.xaml.cs">
       <DependentUpon>BlockingWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Client.cs" />
-    <Compile Include="GestureWindow.xaml.cs">
+    <Compile Include="Tools\Client.cs" />
+    <Compile Include="Windows\GestureWindow.xaml.cs">
       <DependentUpon>GestureWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="TaskManager.cs" />
-    <Compile Include="UndoRedo.cs" />
-    <Compile Include="Utility.cs" />
-    <Compile Include="WhiteBoard.xaml.cs">
+    <Compile Include="Tools\TaskManager.cs" />
+    <Compile Include="Tools\UndoRedo.cs" />
+    <Compile Include="Tools\Utility.cs" />
+    <Compile Include="Windows\WhiteBoard.xaml.cs">
       <DependentUpon>WhiteBoard.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WinApiManager.cs" />
-    <Compile Include="WindowEntry.cs" />
-    <Page Include="BlockingWindow.xaml">
+    <Compile Include="Tools\WinApiManager.cs" />
+    <Compile Include="Tools\WindowEntry.cs" />
+    <Page Include="Windows\BlockingWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="GestureWindow.xaml">
+    <Page Include="Windows\GestureWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Windows\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -86,11 +86,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="WhiteBoard.xaml">
+    <Page Include="Windows\WhiteBoard.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -122,7 +122,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="whiteboard.jpg" />
+    <Resource Include="Images\whiteboard.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
