--- a/BodySee/BodySee.csproj
+++ b/BodySee/BodySee.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Tools\ScreenTouchMode.cs" />
     <Compile Include="Windows\BlockingWindow.xaml.cs">
       <DependentUpon>BlockingWindow.xaml</DependentUpon>
     </Compile>
@@ -65,6 +66,9 @@
     <Compile Include="Tools\TaskManager.cs" />
     <Compile Include="Tools\UndoRedo.cs" />
     <Compile Include="Tools\Utility.cs" />
+    <Compile Include="Windows\ToolBar.xaml.cs">
+      <DependentUpon>ToolBar.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\WhiteBoard.xaml.cs">
       <DependentUpon>WhiteBoard.xaml</DependentUpon>
     </Compile>
@@ -90,6 +94,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Windows\ToolBar.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\WhiteBoard.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
