--- a/BodySee/BodySee.csproj
+++ b/BodySee/BodySee.csproj
@@ -66,8 +66,8 @@
     </Compile>
     <Compile Include="Tools\TaskManager.cs" />
     <Compile Include="Tools\UndoRedo.cs" />
-    <Compile Include="Windows\ToolBar.xaml.cs">
-      <DependentUpon>ToolBar.xaml</DependentUpon>
+    <Compile Include="Windows\Menu.xaml.cs">
+      <DependentUpon>Menu.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\WhiteBoard.xaml.cs">
       <DependentUpon>WhiteBoard.xaml</DependentUpon>
@@ -94,7 +94,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Windows\ToolBar.xaml">
+    <Page Include="Windows\Menu.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
