Finish app list like alt+tab

--- a/BodySee/BodySee.csproj
+++ b/BodySee/BodySee.csproj
@@ -35,6 +35,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapplo.Windows.Common, Version=0.11.0.0, Culture=neutral, PublicKeyToken=5be96fed5d651fee, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapplo.Windows.Common.0.11.17\lib\net461\Dapplo.Windows.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Dapplo.Windows.Shell32, Version=0.11.0.0, Culture=neutral, PublicKeyToken=5be96fed5d651fee, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapplo.Windows.Shell32.0.11.17\lib\net461\Dapplo.Windows.Shell32.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Expression.Interactions, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\WPFGestureRecognizer.1.0.4\lib\net46\Microsoft.Expression.Interactions.dll</HintPath>
     </Reference>
