--- a/BodySee/packages.config
+++ b/BodySee/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapplo.Windows.Common" version="0.11.17" targetFramework="net461" />
+  <package id="Dapplo.Windows.Shell32" version="0.11.17" targetFramework="net461" />
   <package id="System.Drawing.Common" version="4.7.0" targetFramework="net461" />
   <package id="WPFGestureRecognizer" version="1.0.4" targetFramework="net461" />
 </packages>
