--- a/BodySee/BodySee.csproj
+++ b/BodySee/BodySee.csproj
@@ -96,6 +96,9 @@
     <Compile Include="Windows\Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\PenMenu.xaml.cs">
+      <DependentUpon>PenMenu.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\WhiteBoard.xaml.cs">
       <DependentUpon>WhiteBoard.xaml</DependentUpon>
     </Compile>
@@ -114,6 +117,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Windows\Menu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\PenMenu.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
